--- a/teamStyle.css
+++ b/teamStyle.css
@@ -1,4 +1,80 @@
+*
+{
+	margin: 0;
+    padding: 0;
+}
+
+#header
+{
+	width: 100%;
+	height: 50px;
+	background-color: #f3826f;
+	margin-top: 0px;
+}
+
 #TeamPage 
+{
+	text-align: center;
+	font-size: 45px;
+}
+	
+.team
+{
+	width: 75%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#Megan 
+{
+	float: left;
+	background-color: white;
+	width: 50%;
+	height: 350px;
+}
+
+	#Megan img
 	{
-		text-align: center;
+		float: right;
+		margin-right: 35px;
 	}
+
+#Kann
+{
+	float: right;
+	background-color: white;
+	width: 50%;
+	height: 350px;
+}
+	#Kann img
+	{
+		float: left;
+		margin-left: 30px;
+	}
+
+#Tyler
+{
+	float: left;
+	background-color: white;
+	width: 33.33%;
+	height: 350px;
+	text-align: center;
+}
+
+#JT
+{
+	float: left;
+	background-color: white;
+	width: 33.33%;
+	height: 350px;
+	text-align: center;
+}
+
+#Ken
+{
+	float: left;
+	background-color: white;
+	width: 33.33%;
+	height: 350px;
+	text-align: center;
+}
