Take out <br> and change color Meet FoodRepublic..

--- a/teamStyle.css
+++ b/teamStyle.css
@@ -15,7 +15,8 @@
 #TeamPage 
 {
 	text-align: center;
-	font-size: 45px;
+	font-size: 40px;
+	color: #585858;
 }
 	
 .team
@@ -78,3 +79,7 @@
 	height: 350px;
 	text-align: center;
 }
+
+
+
+
